syntax = "proto3";
option java_package="cn.migu.selection.proto.base";

message IndexNavResponse {
	
	string pluginCode=1;
	string status=2;
	string isvisable=3;
    IndexNavContent data=4; //�б� 
	string messageDesc=5;
	
	
}

message IndexNavContent{


	repeated IndexNavIcon  icon=1;
	string isShowLine = 2;
	string isMarginTop = 3;
	string isMarginBottom = 4;
	map<string, string> ctag = 5;
	

}
message  IndexNavIcon{

	string picurl=1 ; //ͼƬ��ַ
	
	string iconname=2; //����
	
	string url=3; //��ת����
	
	string linkId=4;
}